--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
-addons/dialogic/*
-addons/godot-plugin-refresher/*
-addons/json-minify/*
-addons/Todo_Manager/*
-.import/*
+# Other addons
+addons/dialogic/
+addons/godot-plugin-refresher/
+addons/json-minify/
+addons/Todo_Manager/
+
+# Godot 4+ specific ignores
+.godot/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
